# CounterfactualCovid19

./: .gitignore  .prettierignore  .pylintrc  README.md  docker-compose.yml  requirements.txt
.github/workflows/: enforce-code-style.yml  test-backend.yml  test-django.yml
backend/: Dockerfile  README.md  db.sqlite3  pyproject.toml  utils.py
backend/backend/: settings.py  urls.py
backend/backend/settings/: __init__.py  common.py  docker.py  local.py
backend/cases/: apps.py  models.py  serializers.py  views.py
backend/cases/migrations/: 0001_casesrecord.py  0001_initial.py  0002_timeseriescases.py  0002_totalcases.py  0003_timeseriescases.py
backend/cases/models/: __init__.py  concrete.py  ephemeral.py  generators.py
backend/cases/serializers/: __init__.py  concrete.py  ephemeral.py
backend/counterfactual/: __init__.py  simulation.py
backend/countries/: apps.py  models.py  serializers.py  urls.py  views.py
backend/countries/migrations/: 0001_country.py  0001_initial.py
backend/dates/: apps.py  models.py  serializers.py  urls.py  views.py
backend/dates/migrations/: 0001_dates.py  0001_initial.py
backend/knotpoints/: apps.py  models.py  serializers.py  urls.py  views.py
backend/knotpoints/migrations/: 0001_knotpoints.py
backend/possibledates/: apps.py  models.py  serializers.py  urls.py  views.py
backend/possibledates/migrations/: 0001_possibledates.py
backend/scripts/: cases_load.py  dates_load.py  important_dates_load.py  knotpoint_dates_load.py  knotpoints_load.py  possibledates_load.py  time_series_load.py  utils.py
backend/tests/: test_counterfactual.py  test_countries.py  test_simulations.py
counterfactual_calculations/: README.md
counterfactual_calculations/src/: process_data.py  simulate_counterfactuals.py
counterfactual_calculations/tests/: test_process_data.py  test_simulate_counterfactuals.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
src/: process_data.py  simulate_counterfactuals.py
tests/: test_process_data.py  test_simulate_counterfactuals.py
(+51 files in other folders)
