[tool.poetry]
name = "CounterfactualCovid19"
version = "0.1.0"
description = ""
authors = [
    "Kellyn Arnold <k.f.arnold@leeds.ac.uk>",
    "Camila Rangel Smith <crangelsmith@turing.ac.uk>",
    "James Robinson <jrobinson@turing.ac.uk>",
]

[tool.poetry.dependencies]
python = "^3.7.9"
Django = ">=3.2.5"
django-cors-headers = ">=3.7.0"
django-extensions = ">=3.1.3"
djangorestframework = ">=3.12.4"
djangorestframework-gis = ">=0.17"
pandas = "==1.2.5"
psycopg2 = ">=2.9.1"
pycountry = ">=20.7.3"

[tool.poetry.dev-dependencies]
black = ">=21.6b0"
pylint = ">=2.9.3"
pytest = ">=6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
